# FaceTools

./: .gitignore  .pylintrc  ExpertDeepFaceAndArcFace.py  ExpertFaceNetMTCNN.py  FaceDetector.py  README.md  app.py  compare_faces.py  compare_faces_insightface.py  compare_faces_single.py  conftest.py  face_clusterer.py  face_clustering_pipeline.py  index.html  preview.html  pyproject.toml  refer.html  refer_v2.html  render_face.sh.py  requirements.txt  setup.py  sharpness_eval.py  show_matrix.html
application/cli/: extract_faces.py  face_cluster.py  main.py  run.py
application/services/: face_clustering_service.py  face_processing_service.py
cli/: analyze_similarity_matrix.py  arcface_uniqueness.py  argument_parser.py  benchmark70b.py  collage.py  crop_face_square.py  crop_head_square.py  crop_people.py  deepface_face_cluster.py  extract_faces.py  face_cluster.py  gemma-3n-e2b.py  group_files.py  llama.py  main.py  make_matrix.py  prepare_project_context.py  redux.py  remove_alpha_layer.py  render_script.py  split_3x3_image.py
config/: dependency_injector.py
doc/: ARCHITECTURE.md  CI.md  CLUSTER.md  CLUSTER_TASK.md  COLLAGE.md  FILE_STRUCTURE.md  RULES.md  RUN.md  RUN_LLM.md  VOCABULARY.md
domain/: cluster.py  face.py  image.py
examples/: console_dw_open_pose.py  crop_images.py  face_orientation_detector.py  face_to_json.py  main_deepface.py  main_facenet.py  main_matrix.py  mediapipe_to_openpose.py  openpose_estimator.py  pose_estimator.py
public/: crop.html  face_recrop.html  index.html  preview.html  show_groups.html
tests/: conftest.py
(+84 files in other folders)
