[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face_tools"
version = "0.1.0"
description = "Face detection and clustering tools"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "Pillow",
    "ultralytics",
    "deepface",
    "face-recognition",
    "pytest",
    "pytest-cov",
    "pytest-mock"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}